<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="info_app_desc">A simple, rational music player for android.</string>
    <string name="lbl_indexer">Music loading</string>
    <string name="lbl_indexing">Loading music</string>
    <string name="lbl_observing">Monitoring music library</string>
    <string name="lbl_retry">Retry</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_song">Song</string>
    <string name="lbl_all_songs">All songs</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_album">Album</string>
    <string name="lbl_album_live">Live album</string>
    <string name="lbl_album_remix">Remix album</string>
    <string name="lbl_eps">EPs</string>
    <string name="lbl_ep">EP</string>
    <string name="lbl_ep_live">Live EP</string>
    <string name="lbl_ep_remix">Remix EP</string>
    <string name="lbl_singles">Singles</string>
    <string name="lbl_single">Single</string>
    <string name="lbl_single_live">Live single</string>
    <string name="lbl_single_remix">Remix single</string>
    <string name="lbl_compilations">Compilations</string>
    <string name="lbl_compilation">Compilation</string>
    <string name="lbl_compilation_live">Live compilation</string>
    <string name="lbl_compilation_remix">Remix compilation</string>
    <string name="lbl_soundtracks">Soundtracks</string>
    <string name="lbl_soundtrack">Soundtrack</string>
    <string name="lbl_mixtapes">Mixtapes</string>
    <string name="lbl_mixtape">Mixtape</string>
    <string name="lbl_demo">Demo</string>
    <string name="lbl_demos">Demos</string>
    <string name="lbl_mixes">DJ Mixes</string>
    <string name="lbl_mix">DJ Mix</string>
    <string name="lbl_live_group">Live</string>
    <string name="lbl_remix_group">Remixes</string>
    <string name="lbl_appears_on">Appears on</string>
    <string name="lbl_artist">Artist</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_playlist">Playlist</string>
    <string name="lbl_playlists">Playlists</string>
    <string name="lbl_new_playlist">New playlist</string>
    <string name="lbl_empty_playlist">Empty playlist</string>
    <string name="lbl_imported_playlist">Imported playlist</string>
    <string name="lbl_import">Import</string>
    <string name="lbl_import_playlist">Import playlist</string>
    <string name="lbl_export">Export</string>
    <string name="lbl_export_playlist">Export playlist</string>
    <string name="lbl_rename">Rename</string>
    <string name="lbl_rename_playlist">Rename playlist</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_confirm_delete_playlist">Delete playlist?</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_filter_all">All</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_duration">Duration</string>
    <string name="lbl_song_count">Song count</string>
    <string name="lbl_disc">Disc</string>
    <string name="lbl_track">Track</string>
    <string name="lbl_date_added">Date added</string>
    <string name="lbl_sort">Sort</string>
    <string name="lbl_sort_mode">Sort by</string>
    <string name="lbl_sort_direction">Direction</string>
    <string name="lbl_sort_asc">Ascending</string>
    <string name="lbl_sort_dsc">Descending</string>
    <string name="lbl_playback">Now playing</string>
    <string name="lbl_equalizer">Equalizer</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_queue">Queue</string>
    <string name="lbl_zone_all">All</string>
    <string name="lbl_zone_value_arrow">%1$s ▾</string>
    <string name="lbl_zone_frequency">Frequency</string>
    <string name="lbl_zone_filter_clear">Clear all filters</string>
    <string name="lbl_zone_rename">Rename</string>
    <string name="set_transition_graph">Transition graph</string>
    <string name="set_transition_graph_desc">Learn which song you tend to play after each song, and use it to order the queue. Adds a per-song transition log to the overview menu.</string>
    <string name="lbl_transition_log">Transition graph log</string>
    <string name="lbl_transition_empty">No transitions recorded from the current song yet.</string>
    <string name="lbl_transition_none_playing">Nothing is playing.</string>
    <string name="fmt_transition_row">%1$s plays · %2$s skips</string>
    <string name="lbl_zone_bias_understand">How well do you understand %1$s?</string>
    <string name="lbl_zone_bias_love">How much do you love %1$s?</string>
    <string name="lbl_queue_order_title">Queue order</string>
    <string name="lbl_queue_order_similarity">Similarity (−least / +most similar)</string>
    <string name="lbl_queue_order_frequency">Frequency (−least / +most played)</string>
    <string name="lbl_queue_order_random">Random (−fixed / +shuffled)</string>
    <string name="lbl_queue_order_axis_metadata">Axis (+) ↔ Metadata (−)</string>
    <string name="lbl_queue_order_filters_title">Scope filters</string>
    <string name="lbl_queue_order_type_filter">Type</string>
    <string name="lbl_queue_order_language_filter">Language</string>
    <string name="lbl_queue_order_filter_any">Any</string>
    <string name="lbl_queue_order_apply">Apply</string>
    <string name="lbl_queue_order_reset">Reset</string>
    <string name="lbl_zone_pos_header">Position on this axis</string>
    <string name="lbl_zone_pos_hint">Move toward −1 or +1 to set how opposite this value is from others on the same axis. Values close together are treated as similar; far apart as opposite.</string>
    <string name="lbl_zone_pos_others">Other values on this axis</string>
    <string name="lbl_zone_pos_gap">gap %1$s</string>
    <string name="fmt_zone_pos_title">%1$s · %2$s</string>
    <string name="lbl_zone_visualizer">Zone axis visualizer</string>
    <string name="lbl_zone_viz_scope_queue">Queue</string>
    <string name="lbl_zone_viz_scope_nearest">Nearest 20</string>
    <string name="lbl_zone_viz_scope_all">All songs</string>
    <string name="lbl_zone_viz_search_hint">Search a song</string>
    <string name="lbl_zone_viz_empty">No vector data to show yet. Play some music with Smart Chain enabled.</string>
    <string name="lbl_zone_viz_distance">Distance to current: %1$s</string>
    <string name="lbl_zone_viz_legend_hint">tap a line or a song below</string>
    <string name="lbl_zone_viz_now_playing">Now playing</string>
    <string name="desc_zone_viz_reset">Reset zoom and clear focus</string>
    <string name="lbl_zone_assign_change_title">Change tag?</string>
    <string name="lbl_zone_assign_change_confirm">Change %1$s from \"%2$s\" to \"%3$s\" for this song?</string>
    <string name="lbl_zone_assign_clear_confirm">Clear the %1$s tag \"%2$s\" from this song?</string>
    <string name="desc_zone_language">Assign a language to this song</string>
    <string name="desc_zone_type">Assign a type to this song</string>
    <string name="lbl_play_next">Play next</string>
    <string name="lbl_queue_add">Add to queue</string>
    <string name="lbl_playlist_add">Add to playlist</string>
    <string name="lbl_artist_details">Go to artist</string>
    <string name="lbl_album_details">Go to album</string>
    <string name="lbl_song_detail">View properties</string>
    <string name="lbl_parent_detail">View</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_props">Song properties</string>
    <string name="lbl_path">Path</string>
    <string name="lbl_format">Format</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_bitrate">Bit rate</string>
    <string name="lbl_sample_rate">Sample rate</string>
    <string name="lbl_replaygain_track">ReplayGain Track Adjustment</string>
    <string name="lbl_replaygain_album">ReplayGain Album Adjustment</string>
    <string name="lbl_shuffle_shortcut_short">Shuffle</string>
    <string name="lbl_shuffle_shortcut_long">Shuffle all</string>
    <string name="lbl_start_playback">Start playback</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_more">More</string>
    <string name="lbl_path_style">Path style</string>
    <string name="lbl_path_style_absolute">Absolute</string>
    <string name="lbl_path_style_relative">Relative</string>
    <string name="lbl_windows_paths">Use Windows-compatible paths</string>
    <string name="lbl_about">About</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_code">Source code</string>
    <string name="lbl_wiki">Wiki</string>
    <string name="lbl_licenses">Licenses</string>
    <string name="lbl_library_counts">Library statistics</string>
    <string name="lbl_selection">Selection</string>
    <string name="lbl_error_info">Error information</string>
    <string name="lbl_copied">Copied</string>
    <string name="lbl_report">Report</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_author_name">Alexander Capehart</string>
    <string name="lbl_feedback">Feedback</string>
    <string name="lbl_github">Make an issue on GitHub</string>
    <string name="lbl_email">Send an email</string>
    <string name="lbl_donate">Donate</string>
    <string name="lbl_supporters">Supporters</string>
    <string name="lng_widget">View and control music playback</string>
    <string name="lng_indexing">Loading your music library…</string>
    <string name="lng_observing">Monitoring your music library for changes…</string>
    <string name="lng_queue_added">Added to queue</string>
    <string name="lng_play_next">Song will play next</string>
    <string name="lng_playlist_created">Playlist created</string>
    <string name="lng_playlist_imported">Playlist imported</string>
    <string name="lng_playlist_renamed">Playlist renamed</string>
    <string name="lng_playlist_exported">Playlist exported</string>
    <string name="lng_playlist_deleted">Playlist deleted</string>
    <string name="lng_playlist_added">Added to playlist</string>
    <string name="lng_supporters_promo">Donate to the project to get your name added here!</string>
    <string name="lng_search_library">Search your library…</string>
    <string name="lng_tasker_start">
        Starts Auxio using the previously saved state. If no saved state is available, all songs will be shuffled. Playback will start immediately.
        \n\nWARNING: Be careful controlling this service, if you close it and then try to use it again, you will probably crash the app.
    </string>
    <string name="lng_empty_songs">Your songs will show up here.</string>
    <string name="lng_empty_albums">Your albums will show up here.</string>
    <string name="lng_empty_artists">Your artists will show up here.</string>
    <string name="lng_empty_genres">Your genres will show up here.</string>
    <string name="lng_empty_playlists">Your playlists will show up here.</string>
    <string name="lng_file_picker">Load music from the folders that you select. Slower, but more reliable. Requires the vanilla file manager app to be installed.</string>
    <string name="lng_system_database">Load music that the Android OS automatically detects. Faster, but less reliable. No support for filesystem-dependent features like cover.jpg.</string>
    <string name="set_find_duplicates">Find duplicates</string>
    <string name="dup_scanning">Analyzing library for duplicates…</string>
    <string name="dup_none_found">No duplicates found. Every song in your library appears to be acoustically unique.</string>
</resources>