<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".plugin.similarity.ZoneVisualizerFragment">

    <org.oxycblt.auxio.ui.CoordinatorAppBarLayout
        android:id="@+id/zone_viz_appbar"
        style="@style/Widget.Auxio.AppBarLayout"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/zone_viz_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/lbl_zone_visualizer" />

    </org.oxycblt.auxio.ui.CoordinatorAppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/zone_viz_search_layout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            android:hint="@string/lbl_zone_viz_search_hint"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/zone_viz_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/zone_viz_scope_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_small"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/zone_viz_scope_queue"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lbl_zone_viz_scope_queue" />

            <com.google.android.material.chip.Chip
                android:id="@+id/zone_viz_scope_nearest"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_zone_viz_scope_nearest" />

            <com.google.android.material.chip.Chip
                android:id="@+id/zone_viz_scope_all"
                style="@style/Widget.Material3.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_zone_viz_scope_all" />

        </com.google.android.material.chip.ChipGroup>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <org.oxycblt.auxio.plugin.similarity.ParallelCoordinatesView
                android:id="@+id/zone_viz_canvas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/zone_viz_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/spacing_large"
                android:gravity="center"
                android:text="@string/lbl_zone_viz_empty"
                android:textAppearance="@style/TextAppearance.Auxio.BodyLarge"
                android:textColor="?android:attr/textColorSecondary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/zone_viz_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="@dimen/spacing_medium"
                android:background="?attr/colorSurfaceContainerHigh"
                android:paddingHorizontal="@dimen/spacing_medium"
                android:paddingVertical="@dimen/spacing_small"
                android:textAppearance="@style/TextAppearance.Auxio.LabelLarge"
                android:visibility="gone"
                tools:text="Distance to current: 0.42"
                tools:visibility="visible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/zone_viz_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/spacing_medium"
                android:contentDescription="@string/desc_zone_viz_reset"
                android:src="@drawable/ic_close_24"
                app:fabSize="mini" />

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/colorOutlineVariant" />

        <TextView
            android:id="@+id/zone_viz_legend_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_medium"
            android:paddingVertical="@dimen/spacing_small"
            android:textAppearance="@style/TextAppearance.Auxio.LabelLarge"
            tools:text="18 songs · tap a line or a song below" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/zone_viz_legend"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_zone_viz_song" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
