<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:transitionGroup="true"
    tools:context=".plugin.similarity.DuplicatesFragment">

    <org.oxycblt.auxio.ui.CoordinatorAppBarLayout
        android:id="@+id/duplicates_appbar"
        style="@style/Widget.Auxio.AppBarLayout"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/duplicates_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back_24"
            app:title="@string/set_find_duplicates" />

    </org.oxycblt.auxio.ui.CoordinatorAppBarLayout>

    <LinearLayout
        android:id="@+id/duplicates_progress_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:visibility="visible">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/duplicates_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/duplicates_progress_text"
            style="@style/TextAppearance.Auxio.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            tools:text="@string/dup_scanning" />

    </LinearLayout>

    <TextView
        android:id="@+id/duplicates_empty"
        style="@style/TextAppearance.Auxio.BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/spacing_large"
        android:text="@string/dup_none_found"
        android:visibility="gone"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/duplicates_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/item_duplicate_group" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
