<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".plugin.similarity.ZoneValuePositionFragment">

    <org.oxycblt.auxio.ui.CoordinatorAppBarLayout
        android:id="@+id/zone_pos_appbar"
        style="@style/Widget.Auxio.AppBarLayout"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/zone_pos_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/toolbar_zone_position"
            app:navigationIcon="@drawable/ic_back_24"
            tools:title="Happy · Type" />

    </org.oxycblt.auxio.ui.CoordinatorAppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:id="@+id/zone_pos_header"
            android:text="@string/lbl_zone_pos_header"
            android:textAppearance="@style/TextAppearance.Auxio.LabelLarge"
            android:textColor="?attr/colorPrimary" />

        <TextView
            android:id="@+id/zone_pos_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.Auxio.HeadlineSmall"
            tools:text="+0.30" />

        <com.google.android.material.slider.Slider
            android:id="@+id/zone_pos_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:valueFrom="-1.0"
            android:valueTo="1.0"
            android:stepSize="0.05" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:text="@string/lbl_zone_pos_hint"
            android:textAppearance="@style/TextAppearance.Auxio.BodyMedium"
            android:textColor="?android:attr/textColorSecondary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/spacing_medium"
            android:background="?attr/colorOutlineVariant" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_small"
            android:text="@string/lbl_zone_pos_others"
            android:textAppearance="@style/TextAppearance.Auxio.LabelLarge" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/zone_pos_others"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/spacing_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_zone_pos_other" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
